<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SubmissionActivity"
        android:background="@drawable/ic_background">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:background="@drawable/ic_arrow_back_black_24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp" app:srcCompat="@drawable/gads_no_background"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="156dp" app:layout_constraintStart_toEndOf="@+id/imageButton"
            android:layout_marginTop="16dp" android:layout_marginStart="70dp"/>
    <TextView
            android:text="@string/project_submission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project_submission" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange" android:textSize="18sp"/>

    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/project_submission" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounder_corners"/>

    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintStart_toEndOf="@+id/editText" app:layout_constraintTop_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounder_corners"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/email_address"
            android:id="@+id/editText3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginTop="68dp"
            android:background="@drawable/rounder_corners" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/github_link"
            android:ems="10"
            android:id="@+id/editText4"
            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintStart_toStartOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="@+id/editText3" android:layout_marginTop="64dp"
            android:background="@drawable/rounder_corners" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>